src/objects/MammaPrintDetail__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>MammaPrint Details</relationshipLabel>
        <relationshipName>MammaPrint_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H1_H2_status_Snomed__c</fullName>
        <label>H1 H2 status Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_H2_status_Val_Snomed__c</fullName>
        <label>H1 H2 status Val Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_H2_status__c</fullName>
        <formula>IF( MammaPrint_Index__c &gt;= -0.1541 &amp;&amp; MammaPrint_Index__c &lt;= 1,&apos;H1&apos;,IF (MammaPrint_Index__c &gt;= -1 &amp;&amp; MammaPrint_Index__c &lt;= -0.1542, &apos;H2&apos;, &apos;Undetermined&apos;))</formula>
        <label>H1 H2 status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPrintRisk_Snomed__c</fullName>
        <label>MPrintRisk Snomed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MammaPrint_Index_Snomed__c</fullName>
        <label>MammaPrint Index Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MammaPrint_Index__c</fullName>
        <inlineHelpText>Enter MammaPrint Index Value.</inlineHelpText>
        <label>MammaPrint Index</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MammaPrint_Risk_Snomed__c</fullName>
        <label>MammaPrint Risk Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MammaPrint_Risk__c</fullName>
        <inlineHelpText>Select any.</inlineHelpText>
        <label>MammaPrint Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity not sufficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality not sufficient</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MammaPrint_Risk_val_Snomed__c</fullName>
        <label>MammaPrint Risk val Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>MammaPrintDetail__c</referenceTo>
        <relationshipLabel>MammaPrint Details</relationshipLabel>
        <relationshipName>MammaPrint_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pg_Status__c</fullName>
        <label>Pg_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <inlineHelpText>Enter the date of report.</inlineHelpText>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <formula>IF( H1_H2_status__c == &apos;H1&apos;,&apos;MP High 1&apos;,&apos;MP High 2&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specimen_Collection_Dates__c</fullName>
        <label>Specimen Collection Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specimen_Used__c</fullName>
        <label>Specimen Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TargetPrint_Her2_OS_Snomed__c</fullName>
        <label>TargetPrint Her2_OS Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetPrint_Her2_Val_Snomed__c</fullName>
        <label>TargetPrint Her2_Val Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetPrint_Her_2_Index__c</fullName>
        <inlineHelpText>Enter Value up to three decimal.</inlineHelpText>
        <label>TargetPrint Her 2 Index</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetPrint_Her_2_Status__c</fullName>
        <formula>IF( TargetPrint_Her_2_Index__c &gt; 0,&apos;Positive&apos;,IF(TargetPrint_Her_2_Index__c &lt;= 0,&apos;Negative&apos;,&apos;Undetermined status&apos;))</formula>
        <label>TargetPrint Her 2 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tissue_Specimen_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tissue Specimen Detail</label>
        <referenceTo>TissueSpecimenDetail__c</referenceTo>
        <relationshipLabel>MammaPrint Details</relationshipLabel>
        <relationshipName>MammaPrint_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>MammaPrint CRF</relationshipLabel>
        <relationshipName>MammaPrint_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_MammaPrintMicroArray_Id__c</fullName>
        <label>pg_MammaPrintMicroArray_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>MammaPrint Microarray Form</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MammaPrint Details</pluralLabel>
    <recordTypes>
        <fullName>Adhoc</fullName>
        <active>true</active>
        <label>Adhoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Specimen_Collection_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Specimen_Collection_Dates__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Specimen_Collection_Dates__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_MammaPrint_Index</fullName>
        <active>false</active>
        <errorConditionFormula>MammaPrint_Index__c &gt;1.0 || MammaPrint_Index__c &lt; -1.0</errorConditionFormula>
        <errorDisplayField>CompletedDate__c</errorDisplayField>
        <errorMessage>The MammaPrint score value will be a number between -1 and 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_ReportDate</fullName>
        <active>true</active>
        <description>Should not be future date.</description>
        <errorConditionFormula>Report_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Report_Date__c</errorDisplayField>
        <errorMessage>Report date should not be future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_TargetPrint_Her_2_Index</fullName>
        <active>false</active>
        <errorConditionFormula>TargetPrint_Her_2_Index__c &gt;1.0 || TargetPrint_Her_2_Index__c  &lt; -1.0</errorConditionFormula>
        <errorMessage>The MammaPrint score value will be a number between -1 and 1.</errorMessage>
    </validationRules>
</CustomObject>